--- a/dotnetCourse/Views/_ViewImports.cshtml
+++ b/dotnetCourse/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using dotnetCourse
 @using dotnetCourse.Models
+@using dotnetCourse.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
